--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -5,5 +5,5 @@
         <a href="https://www.linkedin.com/in/nickbokaie/" target="_blank"><img alt="linkedin icon" src="/images/social/linkedin.svg"></a>
         <a href="https://www.instagram.com/nickbokaie/" target="_blank"><img alt="instagram icon" src="/images/social/instagram.svg"></a>
     </div>
-    <p>Built by yours truly using <a href="https://middlemanpp.com" target="_blank">Middleman</a></p>
+    <p>Handbuilt by yours truly using <a href="https://middlemanpp.com" target="_blank">Middleman</a></p>
 </footer>
